gitops-manifests/gitops-tools/registry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  namespace: registry
  labels:
    app: docker-registry
spec:
  type: NodePort
  clusterIP: 10.96.224.44  # ClusterIP fija para referencias en kustomization
  ports:
  - name: registry
    port: 5000
    targetPort: 5000
    nodePort: 30100  # Registry accesible en localhost:30100 (rango CI/CD)
  selector:
    app: docker-registry
